added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>HTML attribute gives additional information about an element.</li>
+          <li>Metadata is data about the webpage that the browser uses to effectively serve the webpage.</li>
+          <li>Remember the connection between elements as parent vs child elemets.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS stands for Cascading Style Sheets.</li>
+          <li>It is responsible for how the layout of the HTML looks.</li>
+          <li>CSS is an essential part of webpage design.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Git is a distributed version control system used by developers.</li>
+          <li>It is helpful in tracking the changes that happen to the main code during developemt</li>
+          <li>A repository is collection of files and veriosn history.</li>
+          <li>Repositories can be local or hosted on platofroms like Github.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>It is the main language used for web development.</li>
+          <li>Can be embeded into HTML pages.</li>
+          <li>It eneables users to interact with our website.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
