--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
           <li>It is the main language used for web development.</li>
           <li>Can be embeded into HTML pages.</li>
           <li>It eneables users to interact with our website.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
